# smart-farm

./: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  equipement.c  equipement.h  equipement.txt  interface.c.bak  interface.h.bak  main.c  projetintegre  temp.txt  temperature.txt  users.txt  verification.c  verification.h
.deps/: callbacks.Po  equipement.Po  verification.Po
